# xmaxx-firmware-rs

./: Cargo.toml  README.md
src/: main.rs  messages.rs
src/utils/: readbuf.rs
xmaxx-firmware/: Cargo.toml  install_prerequisites.sh
xmaxx-firmware/avr-specs/: avr-atmega2560.json
xmaxx-firmware/src/: main.rs  utils.rs
xmaxx-firmware/src/utils/: debug.rs  panic.rs  time.rs
xmaxx-joy/: README.md  requirements.txt
xmaxx-joy/src/: joy.py  xmaxx_joy.py
xmaxx-messages/: Cargo.toml
xmaxx-messages/src/: lib.rs
xmaxx-python/: Cargo.toml  README.md  pyproject.toml
xmaxx-python/src/: lib.rs
