[package]
name = "xmaxx-firmware"
version = "0.1.0"
authors = ["Francisco Pascoa <francisco.pascoa@usherbrooke.ca>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "xmaxx-firmware"
test = false
bench = false

[dependencies]
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "1.0"
avr-device = "0.5.4"

xmaxx-messages = { path = "../xmaxx-messages" }

# This trick allows to use both versions of embedded-hal simultaniously.
# It is required to import `embedded_hal_v0::serial` and `embedded_hal::pwm`.
[dependencies.embedded-hal-v0]
version = "0.2.3"
package = "embedded-hal"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "3e362624547462928a219c40f9ea8e3a64f21e5f"
features = ["arduino-mega2560"]

# The latest releases of `proc-macro2` do not support the rust toolchain that
# we use.  Thus, we must fix this dependency to an older version where our
# toolchain is still supported.  See https://github.com/Rahix/avr-hal/issues/537
[build-dependencies.proc-macro2]
version = "=1.0.79"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
